--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -469,6 +469,7 @@ FEU_per_ottoman_support:0 "Ottoman Support"
 FEU_industrial_machinery:0 "Industrial Machinery"
 FEU_fight_uk:0 "Fight the Entente"
 FEU_persia_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+FEU_persia_capital_arms_workshops_desc:0 "Our nation doesn't have the capacity for an arms industry to produce equipment for our army. Instead, we should set up workshops in [ROOT.Capital.GetCapitalVictoryPointName] to produce pieces of equipment for our armed forces."
 
 FEU_secure_our_independence:0 "Secure our Independence"
 FEU_agreements_with_britain:0 "Agreements With Britain"
@@ -480,19 +481,29 @@ FEU_ottoman_support:0 "Ottoman Aid"
 FEU_secure_our_position:0 "Secure our Position"
 FEU_fight_the_colonisers:0 "Fight the Colonisers"
 FEU_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+FEU_capital_arms_workshops_desc:0 "Our nation doesn't have the capacity for an arms industry to produce equipment for our army. Instead, we should set up workshops in [ROOT.Capital.GetCapitalVictoryPointName] to produce pieces of equipment for our armed forces."
+FEU_foreign_industrial_tech:0 "Foreign Industrial Machinery"
 FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
 FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
 FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
 
 FEU_loyalty_to_russia:0 "Loyalty to Russia"
+FEU_loyalty_to_russia_desc:0 "To strengthen the position of our nation, we must be loyal to our master, the Russian Empire. We can ask for their help in strengthening and developing our nation so we can be loyal to the empire."
 FEU_russian_army_techniques:0 "Russian Army Tactics"
+FEU_russian_army_techniques_desc:0 "Russia is one of the great powers in the world and has one of the, if not the largest army. They have advanced knowledge in the field of warfare and we can ask for their knowledge and tactics to strengthen our military too."
 FEU_import_russian_weapons:0 "Import Russian Weapons"
+FEU_import_russian_weapons_desc:0 "We are lacking any sort of military industry to produce arms domestically, luckily with Russia as our protector we can request for equipment from them to arm our army."
 FEU_increase_conscription:0 "Expand the Army"
+FEU_increase_conscription_desc:0 "To further expand our army, we will need more soldiers for the army. This will mean we will have to expand our conscription to enlist more soldiers so we can bolster the size of [ROOT.GetAdjective] armed forces."
 FEU_russian_development_aid:0 "Russian Development Aid"
+FEU_russian_development_aid_desc:0 "Our nation is pretty backwards and will need a lot of work to properly fix it. We can ask for aid from Russia to help us develop our nation."
 FEU_russian_education:0 "Russian Education"
+FEU_russian_education_desc:0 "The [ROOT.GetAdjective] education system is not great at all, with little schools and massive illiteracy. We can take some ideas from the Russian education system and also request for some of their ideas to greatly boost our education."
 FEU_unwavering_loyalty:0 "Unwavering Loyalty"
+FEU_unwavering_loyalty_desc:0 "Our loyalty to the Russian Empire must be must be strong and guaranteed, as they are our protectors. We must do all we can for them, and support them in any way as their help for us would be guaranteed if we needed it."
 FEU_russian_industrial_tech:0 "Russian Industrial Technology"
 FEU_capital_arms_workshops_central_asia:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+FEU_capital_arms_workshops_central_asia_desc:0 "Our nation doesn't have the capacity for an arms industry to produce equipment for our army. Instead, we should set up workshops in [ROOT.Capital.GetCapitalVictoryPointName] to produce pieces of equipment for our armed forces."
 FEU_foreign_industrial_tech:0 "Foreign Industrial Machinery"
 
 FEU_the_adjective_armed_forces:0 "The [ROOT.GetAdjective] Armed Forces"
