--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -528,6 +528,11 @@ ww1_BUL_TUR.67.a:0 "Bring It Up To Mr. Bey"
 ww1_BUL_TUR.68.t:0 "Ivan Geshov, Again, Pushes for a Renewal of A Trade Arrangment"
 ww1_BUL_TUR.68.d:0 "Ivan Geshov, since January of 1910, has been pushing for us to renew the trade agreement. We make up the third of Bulgarian exports and most of Bulgarian imports, if we strengthen our trade relations we could economically coherce them into our influence... Oh and it would improve the living standars of Thrace and Macedonia but who cares about them?"
 
+ww1_BUL_TUR.69.t:0 "Grand Mufti Elections"
+ww1_BUL_TUR.69.d:0 "The Grand Mufti is the highest religious authority within Sunni Islam in a given country or region, overseeing Islamic legal and theological matters. Due to our high muslim populance this is a very important election; now even more emphasized by the Ottoman Empire's wishes to see Suleyman Rusdi, current mufti of Vividin, come to power. They fear that if Hocazade Mehmet Muhiddin Efendi continues his reign in just a few decades all Muslims in Thrace and Macedonia will cease to exist."
+ww1_BUL_TUR.69.a:0 "Hocazade Mehmet Muhiddin Efendi §OThis is the historical choice.§!"
+ww1_BUL_TUR.69.b:0 "Suleyman Rusdi"
+
  ###Ideas Loc###
  #BULGARIA
 BUL_bdz:0 "BDZ"
