Tweak Libyan states

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -659,9 +659,9 @@
  STATE_658: "Abu Dhabi"
  STATE_659: "Aden"
  STATE_660: "Equatorial Africa"
- STATE_661: "Trablusgarp"
+ STATE_661: "Jabal al Gharbi"
  STATE_662: "Upper Asir"
- STATE_663: "Cyrenaica"
+ STATE_663: "Al Wahat"
  STATE_664: "Southern Slovakia"
  STATE_665: "Gabes"
  STATE_666: "Lappland"
@@ -1058,6 +1058,8 @@
  STATE_1057: "Andirin"
  STATE_1058: "Aintab"
  STATE_1059: "Batha"
+ STATE_1060: "Trablusgarp"
+ STATE_1061: "Cyrenaica"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
