--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1970,3 +1970,12 @@
 
  RIA_democratic_party:0 "Roesidijah Riouw"
  RIA_neutrality_party:0 "Yang Dipertuan Muda Dynasty"
+
+ TRP_neutrality_party:0 "Hukumat al-Jumhuriyat"
+ TRP_neutrality_party_long:0 "Hukumat al-Jumhuriyat at-Trablusiya"
+ TRP_fascism_party:0 "Hukumat al-Jumhuriyat"
+ TRP_fascism_party_long:0 "Hukumat al-Jumhuriyat at-Trablusiya"
+ TRP_democratic_party:0 "Hukumat al-Jumhuriyat"
+ TRP_democratic_party_long:0 "Hukumat al-Jumhuriyat at-Trablusiya"
+ TRP_communism_party:0 "Hukumat al-Jumhuriyat"
+ TRP_communism_party_long:0 "Hukumat al-Jumhuriyat at-Trablusiya"
