--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1221,6 +1221,7 @@
  VICTORY_POINTS_5165: "Mayor Pablo Lagerenza"
  VICTORY_POINTS_7209: "Khoms"
  VICTORY_POINTS_9980: "Misrata"
+ VICTORY_POINTS_1189: "Aziziya"
  
  #TGWR Victory Points
  VICTORY_POINTS_11887: "Niš"
