--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15188,3 +15188,6 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_libya.1.d:0 "Weakened by his defeat, Ahmed Sharif as-Senussi concedes the leadership of the Senussi order to his young cousin Mohammed Idris, who is open to the negotiations with the imperialists."
  ww1_libya.1.a:0 "Inshallah."
  LBA_modus_vivendi_of_acroma:0 "Modus vivendi of Acroma"
+ ww1_libya.2.t:0 "Tripolitanian Civil War"
+ ww1_libya.2.d:0 "The death of Ramadan Asswehly, one of the Walis of [TRP.GetNameDef], sparked a civil war. The unstable republic is crumbling..."
+ ww1_libya.2.a:0 "It's time to expand colony."
