--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3208,3 +3208,9 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  #Belorussia
  BLR_weak_national_identity:0 "Weak National Identity"
  BLR_weak_national_identity_desc:0 "While many nations in Eastern Europe have experienced a national awakening in the second half of the 19th century, the idea of a Belarusian nation only started to appear in this century. Now very few Belarusians can even comprehend the idea of nationalism, let alone embrace it, and many even consider Belarusians to be nothing but Polonised Russians or poor, uncultured peasants unworthy of the title of "nation""
+
+ #Tripolitania
+ TRP_unstable_state:0 "Unstable Republic"
+ TRP_unstable_state_desc:0 "[ROOT.GetNameDefCap] is an independent republic founded by several tribal groups in the province that is not allied with Italy or the Senussi, with four Walis leading the republic government. However, this contradictory structure itself makes the republic unstable."
+ TRP_civil_war:0 "Civil War"
+ TRP_civil_war_desc:0 "The republic's power structure, unstable from the start, was completely shattered, with various parts of the republic plunging into civil war."
