--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3240,9 +3240,23 @@
  RIA:0 "Riau-Lingga"
  RIA_DEF:0 "Riau-Lingga"
  RIA_ADJ:0 "Riau-Linggan"
+ RIA_democratic:0 "Riau-Lingga Sultanate"
  RIA_democratic_DEF:0 "the Riau-Lingga Sultanate"
+ RIA_neutrality:0 "Riau-Lingga Sultanate"
  RIA_neutrality_DEF:0 "the Riau-Lingga Sultanate"
  RIA_communism_DEF:0 "the People's Republic of Riau-Lingga"
+
+ TRP:0 "Tripolitania"
+ TRP_DEF:0 "Tripolitania"
+ TRP_ADJ:0 "Tripolitanian"
+ TRP_democratic:0 "Tripolitanian Republic"
+ TRP_democratic_DEF:0 "the Tripolitanian Republic"
+ TRP_neutrality:0 "Tripolitanian Republic"
+ TRP_neutrality_DEF:0 "the Tripolitanian Republic"
+ TRP_fascism:0 "Tripolitanian Republic"
+ TRP_fascism_DEF:0 "the Tripolitanian Republic"
+ TRP_communism:0 "Tripolitanian Socialist Republic"
+ TRP_communism_DEF:0 "the Tripolitanian Socialist Republic"
  
  ### Debug Tag ###
  XXA:0 "Debug Tag"
