Tweak interwar Senussia

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15191,3 +15191,12 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_libya.2.t:0 "Tripolitanian Civil War"
  ww1_libya.2.d:0 "The death of Ramadan Asswehly, one of the Walis of [TRP.GetNameDef], sparked a civil war. The unstable republic is crumbling..."
  ww1_libya.2.a:0 "It's time to expand colony."
+ ww1_libya.3.t:0 "Autonomous Cyrenaica?"
+ ww1_libya.3.d:0 "In the Great War, we fought a war with the Senussiya to secure Cyrenaica, but it didn't end well. They're practically ruling the Cyrenaica province, so we might as well just offer it to them to become our autonomous protectorate, giving [LBA.GetLeader] the title of the Emir of Cyrenaica."
+ ww1_libya.3.a:0 "Suggest him that one."
+ ww1_libya.3.b:0 "No need."
+ ww1_libya.4.t:0 "Autonomous Emirate?"
+ ww1_libya.4.d:0 "The Italian government had failed to conquer us to expand the colony in Cyrenaica, but now they instead offered us the position of Emir of Cyrenaica and to become the de facto autonomous ruler of the Cyrenaica province. We may have won the battles so far, but in the long run this may be the better option..."
+ ww1_libya.4.a:0 "Alright, sounds fair."
+ ww1_libya.4.b:0 "Can't trust 'em."
+ accord_of_alrajma:0 "Accord of al-Rajma"
