--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2702,6 +2702,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
 
  LBA_traders_of_east_sahara:0 "Traders of East Sahara"
  LBA_traders_of_east_sahara_desc:0 "For centuries, the Senussi have thrived as the custodians of trade routes crisscrossing the vast expanses of the Eastern Sahara. Leveraging their deep knowledge of the desert and strong ties with local tribes, the Senussi Order facilitates the movement of goods, including salt, dates, gold, and livestock, through harsh, otherwise impassable terrains. These networks not only provide economic sustenance but also extend the Order’s influence across North Africa and into the Sahel."
+ LBA_i_hate_italians:0 "Nominal Protectorate"
+ LBA_i_hate_italians_desc:0 "Italy has virtually no influence here. Moreover, relations are getting worse."
 
  # Dervish
  SOM_dervish_movement:0 "Dervish Movement"
