--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1864,6 +1864,10 @@
  LBA_TUR_DEF:0 "the Vilayet of Tripolitania"
  LBA_TUR_communism_DEF:0 "the Socialist Republic of Trablusgarp"
  LBA_TUR_ADJ:0 "Trablus"
+ LBA_emirate_neutrality:0 "Emirate of Tripolitania"
+ LBA_emirate_neutrality_DEF:0 "the Emirate of Tripolitania"
+ LBA_emirate_fascism:0 "Emirate of Tripolitania"
+ LBA_emirate_fascism_DEF:0 "the Emirate of Tripolitania"
  ISR_HRE:0 "Kingdom of Jerusalem"
  ISR_HRE_commune:0 "Holy Commune of Jerusalem"
  ISR_HRE_DEF:0 "the Kingdom of Jerusalem"
