--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -18,7 +18,7 @@ ROM_not_we_and_them_but_us:0 "Unity of the 2 Estates"
 ROM_invite_jews:0 "A Safe Haven for the Jews"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_advancements_in_plane_technology:0 "Commission Military Aircraft"
-ROM_advancements_in_plane_technology_desc:0 "We need to adapt the [ROM.GetName] to the future, including aircraft technology. There are a lot of [ROM.GetAdjective] inventors and aircraft designers ready to take the challenge. We will commission one of them to design for us a plane that can be used for military purposes, in major part to transmit messages across vast lands. The question is who do we ask?"
+ROM_advancements_in_plane_technology_desc:0 "We need to adapt [ROM.GetNameDef] to the future, including aircraft technology. There are a lot of Romanian inventors and aircraft designers ready to take the challenge. We will commission one of them to design for us a plane that can be used for military purposes, in major part to transmit messages across vast lands. The question is who do we ask?"
 ROM_domestic_air_manufactor:0 "Cerchez and Co"
 ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government purchases them we might just be able to build ourself an airforce all by ourselves."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
@@ -498,17 +498,17 @@ ROM_defend_the_danube:0 "Defend the Dunăre"
 ROM_law_on_minorities:0 "Romanianization"
 ROM_integration_of_szekelyfold:0 "Integrate [778.GetName]"
 ROM_integration_of_east_alford:0 "Integrate [1020.GetName]"
-ROM_pillage_hungary:0 "Pillage the [HUN.GetAdjective] Border"
+ROM_pillage_hungary:0 "Pillage the Hungarian Border"
 ROM_form_the_little_entente:0 "Form the Little Entente"
 ROM_form_the_little_entente_desc:0 "The formation of the Little Entente is a crucial measure to secure our national interests and protect the stability of our borders against Hungarian revisionism and the potential resurgence of Habsburg influence in Austria or Hungary. By aligning with Czechoslovakia, we shall create a unified front dedicated to preserving the territorial gains that define our post-war sovereignty and ensure regional peace. France has announced its support to our future alliance, providing the diplomatic and security assurances we need. This partnership stands not only as a mutual defense pact but also as a clear statement that we will uphold the treaties and protect the balance established after the Great War, ensuring our independence and stability in Eastern Europe against any forces seeking to challenge it."
 ROM_anti_hungarian_propaganda:0 "Anti-Hungarian Propaganda"
 ROM_anti_hungarian_propaganda_desc:0 "It is our duty to counter Hungarian attempts to undermine our sovereignty and the stability of Eastern Europe. we shall communicate to our people and to our Western allies that Hungarian revisionism poses a clear threat to the borders secured by the Treaty of Trianon. Hungary's aspirations to reclaim Transylvania are a direct challenge to the integrity of Greater Romania, and we will present this as a danger not only to our nation but to the peace of the entire region."
 ROM_retry_to_secure_banat:0 "Finders Keepers"
-ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the [ROM.GetAdjective] Government since our failure of obtaining it at the Paris Peace Conference."
+ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the Romanian Government since our failure of obtaining it at the Paris Peace Conference."
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 ROM_romanian_hungarian_war_focus:0 "The War Against the Magyars"
-ROM_recall_romanian_engineers:0 "Recall [ROM.GetAdjective] Engineers"
-ROM_recall_romanian_engineers_desc:0 "A bunch of [ROM.GetAdjective] aircraft engineers are located in [FRA.GetName] or other Western European countries right now. We can recall them back to [ROM.GetName] for their service as air chiefs."
+ROM_recall_romanian_engineers:0 "Recall Romanian Engineers"
+ROM_recall_romanian_engineers_desc:0 "A bunch of Romanian aircraft engineers are located in [FRA.GetNameDef] or other Western European countries right now. We can recall them back to Romania for their service as air chiefs."
 ROM_unification_with_moldova:0 "Unification with Moldova"
 ROM_fund_the_viata_romaneasca:0 "Fund the Viata Româneasca"
 ROM_fund_the_viata_romaneasca_desc:0 "The Viata Româneasca is a socialist newspaper co-founded by Constantin Stere, used to promote socialist and poporanist ideals to the readers in Romania and other places. Now that Constantin is in charge of the government, he can fund the newspaper through his occupation."
@@ -524,7 +524,7 @@ ROM_placate_the_king:0 "Placate the King"
 ROM_strong_arm_parliament:0 "Strong Arm Parliament"
 ROM_victory_in_hungarian_war:0 "Victory Against Hungary... Again"
 ROM_rebuild_transylvania:0 "Rebuild Transylvania"
-ROM_ensure_hungarian_weakness:0 "Guarantee [HUN.GetAdjective] Weakness"
+ROM_ensure_hungarian_weakness:0 "Guarantee Hungarian Weakness"
 ROM_ensure_hungarian_weakness_desc:0 "There is a possibility that Hungary conducts operations to take back their lands lost in the treaties, so to limit their expansionism, we should occupy their lands to stop any coups and loot supplies."
 ROM_realisation_of_greater_romania:0 "România Mare"
 ROM_realisation_of_greater_romania_desc:0 "Romania has finally been unified into greatness, forming the Whole Romania, Entire Romania or as the people call it, România Mare."
@@ -570,10 +570,10 @@ ROM_modify_supress_hung.tt:0 "§WModify §W§YSuppressed Hungarian Language§Y§
 ROM_serbia_little_entente_fail:0 "§W[SER.GetNameWithFlag] §W§Rrefuses§R§W to join the §W§YRomanian-Hungarian War§Y§W"
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
-ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
-ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
-ROM_war_has_ended_victory2:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§Y[ROM.GetAdjective]-[HUN.GetAdjective] War§Y§W"
-ROM_war_has_ended_lost2:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§Y[ROM.GetAdjective]-[HUN.GetAdjective] War§Y§W"
+ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetNameDef] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
+ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetNameDef] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
+ROM_war_has_ended_victory2:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetNameDef] is §W§Gvictorious§G§W in the §W§YRomanian-Hungarian War§Y§W"
+ROM_war_has_ended_lost2:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetNameDef] is §W§Rdefeated§R§W in the §W§YRomanian-Hungarian War§Y§W"
 ROM_depends_on_event.tt:0 "§WThis focus will be §W§Gautocompleted§G§W with the options of the '§W§YA Question of Priorities§Y§W' event above.§W"
 ROM_commissioned_plane:0 "Has received plane commission"
 ROM_aurel_vlaicu.tt:0 "§WRetire §W§YAurel Vlaicu§Y§W from §W§YRomania§Y§W"
@@ -879,13 +879,13 @@ ww1_romania.44.t:0 "King Carol Demands New Elections"
 ww1_romania.44.d:0 "With our government having exhausted the last of its political capital by pushing through the recent land reform bill, King Carol has been pushing us to announce new elections to shakeup the Romanian government. While the election looks to be dead heat so far, if we win a large majority it could give us a new mandate to push through additional reforms, thus agreeing to hold new elections is our only choice. Although we are relatively popular, the conservatives until Petre Carp have been reorganizing, moving to the left on many economic issues. They threaten to outflank our leftist base on several issues, which could collapse our shakey coalition. If we want to win this election, we're going to have to thread the needle between mantaining our base and appealing to the center."
 ww1_romania.44.a:0 "We look foward to expanding our majority in parliament!"
 ww1_romania.40.t:0 "Romania Requests Bukovina In Exchange for Joining the Central Powers"
-ww1_romania.40.d:0 "While we already signed a defensive pact with us and [GER.GetName], [ROM.GetName] would have no obligations to us if an offensive war against the Entente was started by us. Although [ROM.GetName] joining us against [RUS.GetName] was seen as a forgone conclusion a few years ago, its clear [ROM.GetName] has started to drift away from our sphere of influence lately. Today, [ROM.GetName]'s ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While [GER.GetName] is pressuring us to accept [ROM.GetName]'s' request, it would certainly anger some hungarians."
+ww1_romania.40.d:0 "While we already signed a defensive pact with us and [GER.GetNameDef], [ROM.GetNameDef] would have no obligations to us if an offensive war against the Entente was started by us. Although Romania is joining us against [RUS.GetNameDef] was seen as a forgone conclusion a few years ago, its clear Romania has started to drift away from our sphere of influence lately. Today, Romania's ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While Germany is pressuring us to accept Romania's request, it would certainly anger some hungarians."
 ww1_romania.40.a:0 "This is unacceptable!"
 ww1_romania.40.b:0 "We don't have a use for Bukovina anyways"
-ww1_romania.75.t:0 "[AUH.GetName] agrees to cede Bukovina to us!"
-ww1_romania.75.d:0 "[AUH.GetName] has agreed to cede Bukovina to us in exchange for us joining the Central Powers."
+ww1_romania.75.t:0 "[AUH.GetNameDefCap] agrees to cede Bukovina to us!"
+ww1_romania.75.d:0 "[AUH.GetNameDefCapGetNameDefCap] has agreed to cede Bukovina to us in exchange for us joining the Central Powers."
 ww1_romania.75.a:0 "Fantastic."
-ww1_romania.76.t:0 "[AUH.GetName] refuses to cede Bukovina"
+ww1_romania.76.t:0 "[AUH.GetNameDefCap] refuses to cede Bukovina"
 ww1_romania.18.g:0 "Petre Carp did a decent job once before..."
 ww1_romania.27.t:0 "King Carol I Has Died"
 ww1_romania.27.d:0 "King Carol I, the ruler of Romania since it's entire history as a modern country, has died of natural causes today. As the founder of the modern Romanian state as we know it, all of Romania will mourn for him today. He will be remembered for personally leading the Romania army into battle during the Russo-Ottoman war, and securing Romanias independence in 1878. Now, King Ferdinand will become the next king of Romania. An ally of the liberals, the new king will certainly have his influence on Romanian politics"
@@ -922,10 +922,10 @@ ww1_romania.68.t:0 "The War has Ended!"
 ww1_romania.68.desc:0 "The Great War has affected Romania's economy badly, inflation is off the roofs and we have debts to pay and reperations to complete. We need to fix this problem immediately."
 ww1_romania.68.a:0 "What?!"
 ww1_romania.70.t:0 "Should we send an Aid Package to [ROM.GetName]?"
-ww1_romania.70.desc:0 "We could help out our ally [ROM.GetName] by sending them some equipment, as they aren't doing too well."
+ww1_romania.70.desc:0 "We could help out our ally Romania by sending them some equipment, as they aren't doing too well."
 ww1_romania.70.a:0 "We will always help out our allies."
-ww1_romania.70.b:0 "What has [ROM.GetName] done for us?"
-ww1_romania.71.t:0 "[FRA.GetName] sends us a Aid Package!"
+ww1_romania.70.b:0 "What has Romania done for us?"
+ww1_romania.71.t:0 "[FRA.GetNameDefCap] sends us a Aid Package!"
 ww1_romania.71.desc:0 "Due to our struggles in the war, [FRA.GetName] has decided to send us a bunch of military equipment."
 ww1_romania.71.a:0 "Thanks, I guess."
 ww1_romania.72.t:0 "Successful Aircraft Design Returned"
@@ -998,15 +998,15 @@ ww1_poland.24.a:0 "Sadly"
 ww1_germany.173.t:0 "Austria is asking for help"
 ww1_germany.173.a:0 "to offer them interests in Poland."
 ww1_germany.173.b:0 "No"
-ww1_romania.90.t:0 "[AUH.GetName] cedes Bukovina to the [ROM.GetAdjective]s"
-ww1_romania.90.desc:0 "[ROM.GetName] cedes Bukovina and North Bukovina to the [ROM.GetAdjective]s, and in return, [ROM.GetName] has to join the Central Powers. This seems like a one-sided deal, as [ROM.GetName] get all the benefits."
+ww1_romania.90.t:0 "[AUH.GetName] cedes Bukovina to the Romanians"
+ww1_romania.90.desc:0 "[AUH.GetNameDef] cedes Bukovina and North Bukovina to the Romanians, and in return, Romania has to join the Central Powers. This seems like a one-sided deal, as [ROM.GetNameDef] get all the benefits."
 ww1_romania.90.a:0 "How will the people in Bukovina react?"
-ww1_romania.90.b:0 "The [ROM.GetAdjective] Rat strikes again..."
+ww1_romania.90.b:0 "The Romanian Rat strikes again..."
 ww1_romania.90.c:0 "Hello to our new ally!"
 ww1_romania.90.d:0 "Was this worth it?"
 ww1_romania.90.e:0 "Hopefully we survive in here."
 ww1_romania.91.t:0 "[ROM.GetName] signs an armistice!"
-ww1_romania.91.desc:0 "[ROM.GetName]'s government has come out with a statement saying that it can no longer fight in the Great War, and that they're backing out. They've signed a white peace with [AUH.GetName], [GER.GetName] and [BUL.GetName] in exchange of territory."
+ww1_romania.91.desc:0 "Romanian government has come out with a statement saying that it can no longer fight in the Great War, and that they're backing out. They've signed a white peace with [AUH.GetName], [GER.GetName] and [BUL.GetName] in exchange of territory."
 ww1_romania.91.a:0 "Dark times."
 ww1_romania.91.b:0 "At least we survived."
 ww1_romania.91.c:0 "One less front to deal with."
@@ -1050,9 +1050,9 @@ ww1_romania.81.d:0 "The Hungarians still refuse to accept the new borders delive
 ww1_romania.81.a:0 "We need to intervene"
 ww1_romania.81.b:0 "We need to recover from the war first..."
 ww1_romania.108.t:0 "King Ferdinand delivers a speech to the people"
-ww1_romania.108.d:0 ""Romanians! The war which for the last two years has been encircling our frontiers more and more closely has shaken the ancient foundations of Europe to their depths. It has brought the day which has been awaited for centuries by the national conscience, by the founders of the Romanian State, by those who united the principalities in the war of independence, by those responsible for the national renaissance. It is the day of the union of all branches of our nation. Today we are able to complete the task of our forefathers and to establish forever that which Michael the Great was only able to establish for a moment, namely, a Romanian union on both slopes of the Carpathians."\n-King Ferdinand I of [ROM.GetName]"
+ww1_romania.108.d:0 ""Romanians! The war which for the last two years has been encircling our frontiers more and more closely has shaken the ancient foundations of Europe to their depths. It has brought the day which has been awaited for centuries by the national conscience, by the founders of the Romanian State, by those who united the principalities in the war of independence, by those responsible for the national renaissance. It is the day of the union of all branches of our nation. Today we are able to complete the task of our forefathers and to establish forever that which Michael the Great was only able to establish for a moment, namely, a Romanian union on both slopes of the Carpathians."\n-King Ferdinand I of Romania"
 ww1_romania.108.a:0 "De la Nistru pana la Tisa!"
-ww1_romania.110.t:0 "[ROM.GetName] occupies Hungarian lands!"
+ww1_romania.110.t:0 "Romania occupies Hungarian lands!"
 ww1_romania.110.d:0 "Following its victory in the Hungarian-Romanian War, almost all of Hungary was soon occupied by Romanian troops who show no sign of leaving. They have taken over the native Hungarian people's jobs of policing and other affairs. The hungarian people are being suppressed and are calling out for help. Should we condemn them?"
 ww1_romania.110.a:0 "This occupation must end!"
 ww1_romania.110.b:0 "It's none of our buisness."
@@ -1147,7 +1147,7 @@ ROM_full_male_suffrage:0 "Full Male Suffrage"
 ROM_the_natural_enemy_idea:0 "The Natural Enemy"
 ROM_social_welfare_idea:0 "State-Funded Social Welfare"
 ROM_abandon_federalism_idea:0 "Abandon Federalism"
-ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
+ROM_1912_naval_program_idea:0 "Romanian Naval Program"
 ROM_defense_of_danube:0 "Defense of the Dunăre River"
 ROM_black_sea_fleet:0 "The Romanian Black Sea Fleet"
 ROM_defense_of_danube2:0 "Defense of the Dunăre River"
