--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8526,8 +8526,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  BRA_second_federalist_revolution:0 "Second Federalist Revolution"
  BRA_reincorporate_riograndense_republic:0 "Reincorporate the Riograndense Republic"
  BRA_spreading_revolution_category:0 "Spread the Revolution"
- BRA_socialist_influence:0 "Spread socialism to [From.GetNameDefCap]"
- BRA_socialist_coup:0 "Socialist Revolution in [From.GetName]"
+ BRA_socialist_influence:0 "Spread socialism to [From.GetNonIdeologyNameDef]"
+ BRA_socialist_coup:0 "Socialist Revolution in [From.GetNonIdeologyNameDef]"
  
  unification_of_arabia_cat:0 "Unification of Arabia"
  unification_of_arabia_cat_desc:0 "For centuries, the Arabian Peninsula has been a tapestry of divided tribes and states, each guarding its autonomy with a fierce sense of pride and independence. The sands of time have witnessed countless struggles for power and influence, shaping a landscape where unity seemed a distant mirage. Now, as the winds of change sweep across this ancient land, the long-held dream of a unified Arabia beckons with renewed vigor."
@@ -8538,11 +8538,11 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_conquer_al_hasa:0 "Conquer al-Ihsa'a"
  SAU_battle_of_jarrab:0 "Invade Nejd"
  SAU_battle_of_jarrab_desc:0 "We have observed with growing concern that the British have established contact with Nejd, an action that could significantly alter the balance of power in the region. This development is troubling, as it suggests a potential alliance against our interests. To safeguard our position and maintain our influence, we believe an invasion might be necessary."
- SAU_unite_JBS:0 "Conquer [FROM.GetName]"
+ SAU_unite_JBS:0 "Conquer [FROM.GetNonIdeologyName]"
  SAU_declare_sultanate:0 "Declare Sultanate"
- SAU_unite_HJZ:0 "Conquer [FROM.GetName]"
+ SAU_unite_HJZ:0 "Conquer [FROM.GetNonIdeologyName]"
  SAU_declare_kingdom_of_hejaz_and_nejd:0 "Declare Hejaz and Nejd"
- SAU_unite_ASR:0 "Conquer [FROM.GetName]"
+ SAU_unite_ASR:0 "Conquer [FROM.GetNonIdeologyName]"
  SAU_declare_saudi_arabia:0 "Declare Saudi Arabia"
  SAU_invade_kuwait:0 "Demand [904.GetName] and [904.GetName]"
  SAU_ottoman_saudi_treaty_timer:0 "The Ottoman-Saudi Confrontation"
@@ -8656,7 +8656,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  CZE_sue_for_peace_HUN:0 "Offer Surrender Terms to [HUN.GetName]"
 
- JAM_federation_french_guiana:0 "Integrate [FROM.GetName] to the Federation"
+ JAM_federation_french_guiana:0 "Integrate [FROM.GetNonIdeologyName] to the Federation"
  JAM_federation_french_guiana_desc:0 "[FROM.owner.GetName] is in the civil war and [FROM.GetName] is endangered defenseless. The federation must protect immigrants and residents in the region."
 
  AFG_attack_entente:0 "Attack the Entente"
@@ -8702,9 +8702,6 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SWE_meet_nationalists_desc:0 "Sweden doesn't have many nationalists- but they aren't negligble. We should hear them out and see what they want, if only to keep them off our backs for a time."
  SWE_allow_agricultural_lobbying:0 "Allow Agricultural Lobbying"
  SWE_allow_agricultural_lobbying_desc:0 "Agriculture has a very strong influence in Sweden's rural land. By allowing them to lobby the government, we may be able to win favour with some influential farmers and buy some time to implement our policy."
- SWE_form_SWE_NOR:0 "Form Sweden-Norway"
- SWE_form_SWE_NOR_category:0 "Formable Nations"
- SWE_invade_finland:0 "Invade [FROM.GetName]"
  
  LIB_monrovia_conference_category:0 "Monrovia Conference"
  LIB_mali_rise_up:0 "[MLI.GetFlag] Mali Revolt"
@@ -8750,7 +8747,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SOM_join_ottomans:0 "Join [TUR.GetNameDef] in their war with [ENG.GetNameDef]"
  somaliland_campaign:0 "Somaliland campaign"
  SOM_claim_somali_territories:0 "Reclaim [FROM.GetName]"
- SAU_demand_somali_annexation:0 "Demand Somali Annexation of [FROM.GetName]"
+ SAU_demand_somali_annexation:0 "Demand Somali Annexation of [FROM.GetNonIdeologyNameDef]"
  SAU_solidify_control_in_empty_quarter:0 "Appease Tribles in the Empty Quarter"
  SAU_solidify_control_in_empty_quarter_desc:0 "The Empty Quarter, Rub' al Khali Desert is the second largest sandy desert in the world. It is sparsely populated, with a small number of Bedouin tribal groups roaming the sands. We now need to ensure that they are loyal to our government and that the region is secured as our territory."
 
