fix errors and rename focus

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -487,7 +487,7 @@ FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
 FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
 FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
 
-FEU_loyalty_to_russia:0 "Loyalty to Russia"
+FEU_loyalty_to_russia:0 "Loyalty to the Tsar"
 FEU_loyalty_to_russia_desc:0 "To strengthen the position of our nation, we must be loyal to our master, the Russian Empire. We can ask for their help in strengthening and developing our nation so we can be loyal to the empire."
 FEU_russian_army_techniques:0 "Russian Army Tactics"
 FEU_russian_army_techniques_desc:0 "Russia is one of the great powers in the world and has one of the, if not the largest army. They have advanced knowledge in the field of warfare and we can ask for their knowledge and tactics to strengthen our military too."
