--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3901,7 +3901,11 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_mexico.1083.t: "The last battle between Mexico and United States"
  ww1_mexico.1083.d: "Believing the Americans that Villa could be in El Carrizal sent a detachment. On June 21 at dawn, US troops were spotted from Carrizal. In reporting on the situation, Lieutenant Colonel Rivas marched to him to ask Commander Boyd what was the reason for his presence in that place, to which it was said that some deserters were being pursued, which is why the American leader insisted In passing Rivas instructed the commander of the Mexican troops, who notified the American captain that he would not be able to stop there, at his insistence, he was offered to wait for instructions again to avoid any misunderstanding and an armed conflict. Faced with the refusal,the two commanders then retired to begin the battle, ordering General Gomez to open fire to prevent the advance of the Americans. At the beginning of the battle, Gómez was mortally wounded, taking the command Lieutenant Colonel Rivas; Boyd died shortly afterwards and another officer named Morey was injured; the invaders, seeing themselves without bosses, surrendered after suffering severe losses.This hard-fought battle lasted about three hours and further tightened relations between the two countries. However, the US government was more concerned about its increasingly deteriorating relations with the German government and wanted to avoid two possible fronts in case of war with Germany, decided to solve its problems with Mexico. A treaty was agreed upon in which it was felt that the punitive expedition should leave the country.This provoked a new sense of patriotism in the north of the country as there were a large number of volunteers who were quickly trained and enlisted in the Mexican army for fear of a strong counterattack by Pershing."
  ww1_mexico.1083.a: "Hopefully this is the end of this conflict."
- 
+ #MONGOLIA
+ ww1_mongolia.2.t:0 "Treaty with Mongolia"
+ ww1_mongolia.2.d:0 "[MON.GetNameDef] has sent us a request proposing a bilateral treaty between our two countries, where we will recognise eachother and also sign an alliance."
+ ww1_mongolia.2.a:0 "Of course, agree to it"
+ ww1_mongolia.2.b:0 "We refuse"
  #MONTENEGRO
  ww1_montenegro.1.t: "Treaty with Serbia"
  ww1_montenegro.1.d: "Serbia guaranteed us that we would get Eastern Montenegro under control after the capitulation of the Ottoman Empire."
