--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -487,6 +487,14 @@ FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
 FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
 FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
 
+FEU_protect_our_independence:0 "Protect our Independence"
+FEU_letter_to_saint_petersberg:0 "Letter to Saint Petersberg"
+FEU_russo_mongol_treaty:0 "Russo-Mongol Treaty"
+FEU_mongolia_russian_aid:0 "Russian Aid"
+FEU_bilateral_treaty_with_tibet:0 "Bilateral Treaty with Tibet"
+FEU_fight_china:0 "Fight China"
+FEU_great_mongolia_idea:0 "Greater Mongolia Idea"
+
 FEU_loyalty_to_russia:0 "Loyalty to the Tsar"
 FEU_loyalty_to_russia_desc:0 "To strengthen the position of our nation, we must be loyal to our master, the Russian Empire. We can ask for their help in strengthening and developing our nation so we can be loyal to the empire."
 FEU_russian_army_techniques:0 "Russian Army Tactics"
