--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1935,6 +1935,8 @@ FEU_fight_the_sick_man_idea:0 "Fighting the Sick Man"
 FEU_fight_the_uk_idea:0 "Fighting the Colonisers"
 FEU_russian_aid_idea:0 "Russian Aid"
 FEU_russian_military_tactics:0 "Russian Tactics"
+FEU_russian_loan_idea:0 "Russian Loan"
+FEU_fight_against_china:0 "The Fight Against China"
 
  #UK
  ENG_Staff:0 "English Staff"
