--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -1,10 +1,8 @@
 ﻿l_english:
 
-
 ## -- FOCUSES -- ##
 ROM_restore_civilian_control:0 "Hold New Snap Elections"
 ROM_restore_civilian_control_desc:0 "Running a country is tough work. King Carol in all of his grace has decided to allow democracy again, for a time. They must work carefully and diligently if they want to keep that power."
-
 ROM_national_opposition_idea:0 "National Opposition"
 ROM_the_carp_constitution:0 "The Carp Constitution"
 ROM_the_carp_constitution_desc:0 "With all enemies of Carp neutralized, we can finally take drastic actions to reorganize the Romanian state. The events of the past year have made it clear Romania must move away from decadent parliamentarism and move towards an all powerful strong ruler, and our new constitution will do just this."
@@ -560,6 +558,15 @@ ROM_flight_school:0 "The 'Aurel Vlaicu' Aviation School"
 ROM_flight_school_desc:0 "Named after the famed Romanian plane engineer Aurel Vlaicu, this school will serve to recruit new pilots for the RAC."
 ROM_conduct_air_bombing_raids:0 "Conduct Air Bombing Raids"
 ROM_conduct_air_bombing_raids_desc:0 "The RAC needs to conduct bombing raids in major enemy cities to weaken their ifnrastructure to give us an advantage in the war."
+ROM_ban_the_pnl_and_pcd:0 "Ban the PNL and the PCD"
+ROM_handle_the_radical_lunatics:0 "Handle the Radical Lunatics"
+ROM_dismiss_parliament:0 "Dismiss Parliament"
+ROM_the_enemy_from_within:0 "The Enemy from Within"
+ROM_romanian_mountaineer_corps:0 "Vânatori de Munte"
+ROM_romanian_mountaineer_corps_desc:0 "It's time to establish a fighting force that can fight adaptably in the lands to our west. The Vânatori de Munte will be that fighting force to defend us in the mountain ranges."
+
+
+
 ## FOCUS_END
 
 ## -- TOOLTIPS -- ##
