--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -2292,18 +2292,18 @@
  TUR_anti_imperialist_revanchist_struggle_revanchist_high_control:0 "High Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_medium_control:0 "Medium Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_low_control:0 "Low Revanchist Control"
- TUR_army_civilian_struggle:0 "Army-Civilian Struggle"
- TUR_army_civilian_struggle_army:0 "Army"
- TUR_army_civilian_struggle_civilian:0 "Civilian"
- TUR_army_civilian_struggle_army_balanced:0 "Balanced Influence"
- TUR_army_civilian_struggle_army_full_control:0 "Full Army Influence"
- TUR_army_civilian_struggle_army_high_control:0 "High Army Influence"
- TUR_army_civilian_struggle_army_medium_control:0 "Medium Army Influence"
- TUR_army_civilian_struggle_army_low_control:0 "Low Army Influence"
- TUR_army_civilian_struggle_civilian_full_control:0 "Full Civilian Influence"
- TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Influence"
- TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Influence"
- TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Influence"
+ TUR_unionist_struggle:0 "Army-Civilian Struggle"
+ TUR_unionist_struggle_enver_pasha:0 "Army"
+ TUR_unionist_struggle_talat_pasha:0 "Civilian"
+ TUR_unionist_struggle_enver_pasha_balanced:0 "Balanced Influence"
+ TUR_unionist_struggle_enver_pasha_full_control:0 "Full Army Influence"
+ TUR_unionist_struggle_enver_pasha_high_control:0 "High Army Influence"
+ TUR_unionist_struggle_enver_pasha_medium_control:0 "Medium Army Influence"
+ TUR_unionist_struggle_enver_pasha_low_control:0 "Low Army Influence"
+ TUR_unionist_struggle_talat_pasha_full_control:0 "Full Civilian Influence"
+ TUR_unionist_struggle_talat_pasha_high_control:0 "High Civilian Influence"
+ TUR_unionist_struggle_talat_pasha_medium_control:0 "Medium Civilian Influence"
+ TUR_unionist_struggle_talat_pasha_low_control:0 "Low Civilian Influence"
  TUR_appoint_liberals:0 "Appoint Liberals"
  TUR_appoint_conservatives:0 "Appoint Conservatives"
  TUR_denounce_war:0 "Denounce War"
