--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -6582,20 +6582,20 @@
  TUR_anti_imperialist_revanchist_struggle_revanchist_high_control:0 "High Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_medium_control:0 "Medium Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_low_control:0 "Low Revanchist Control"
- TUR_army_civilian_struggle:0 "Army-Civilian Struggle"
- TUR_army_civilian_struggle_balanced:0 "Balanced Influence"
- TUR_army_civilian_struggle_civilian:0 "Civilian Faction"
- TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Faction Influence"
- TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Faction Influence"
- TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Faction Influence"
- TUR_army_civilian_struggle_army:0 "Army Faction"
- TUR_third_faction_civilian_struggle_third_faction:0 "Third Faction"
- TUR_army_civilian_struggle_army_high_control:0 "High Army Faction Influence"
- TUR_army_civilian_struggle_army_medium_control:0 "Medium Army Faction Influence"
- TUR_army_civilian_struggle_army_low_control:0 "Low Army Faction Influence"
- TUR_third_faction_civilian_struggle_third_faction_high_control:0 "High Third Faction Influence"
- TUR_third_faction_civilian_struggle_third_faction_medium_control:0 "Medium Third Faction Influence"
- TUR_third_faction_civilian_struggle_third_faction_low_control:0 "Low Third Faction Influence"
+ TUR_unionist_struggle:0 "Unionist Struggle"
+ TUR_unionist_struggle_balanced:0 "Balanced Influence"
+ TUR_unionist_struggle_talat_pasha:0 "Talat's Faction"
+ TUR_unionist_struggle_talat_pasha_high_control:0 "High Talat Influence"
+ TUR_unionist_struggle_talat_pasha_medium_control:0 "Medium Talat Influence"
+ TUR_unionist_struggle_talat_pasha_low_control:0 "Low Talat Influence"
+ TUR_unionist_struggle_enver_pasha:0 "Enver's Faction"
+ TUR_unionist_struggle_cemal_pasha:0 "Cemâl's Faction"
+ TUR_unionist_struggle_enver_pasha_high_control:0 "High Enver Influence"
+ TUR_unionist_struggle_enver_pasha_medium_control:0 "Medium Enver Influence"
+ TUR_unionist_struggle_enver_pasha_low_control:0 "Low Enver Influence"
+ TUR_unionist_struggle_cemal_pasha_high_control:0 "High Cemâl Influence"
+ TUR_unionist_struggle_cemal_pasha_medium_control:0 "Medium Cemâl Influence"
+ TUR_unionist_struggle_cemal_pasha_low_control:0 "Low Cemâl Influence"
  TUR_local_central_rule:0 "Local-Central Committee Influence"
  TUR_local_central_rule_balanced:0 "Balanced Influence"
  TUR_local_central_rule_local:0 "Committee Member"
